--- a/NewVizyonProject/Views/Sektor/Index.cshtml
+++ b/NewVizyonProject/Views/Sektor/Index.cshtml
@@ -1,123 +1,8 @@
-﻿@*@model List<Sektor>*@
-@using NewVizyonProject.Models.ViewModel
-@model SektorVeKonuViewModel
+﻿
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_IndexLayout.cshtml";
 }
 
-<!DOCTYPE html>
+<h1 style="text-align:center;">Index Page</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/Ajax/SektorSave.js"></script>
-<script src="~/Ajax/SektorUpdate.js"></script>
-<body>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-
-    <div class="container">
-
-        <div class="modal fade" id="myModal" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        @*<h4 class="modal-title"></h4>*@
-                    </div>
-
-                    <div class="modal-body">
-                        <form class="form-group">
-                            <b>Sektor Id</b>
-                            <input id="sektorid" type="text" class="form-control" />
-                            <b>Sektor Adı</b>
-                            <input id="sektorname" type="text" class="form-control" />
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" id="sektorUpdate" class="btn btn-outline-success">Güncelle</button>
-                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <button style="margin-left:240px;" type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#mySaveModal">Yeni Sektör Kaydet</button><br /><br />
-    <div class="form-horizontal" style="margin-left:240px; margin-top:50px;">
-        <div class="form-group">
-            @*<label class="control-label;" style="margin-left: 15px; font-weight: 500;">Sektör</label>*@
-            <div class="col-md-10" style="width:280px;">
-                @Html.DropDownList("DrpSektor", ViewBag.sektorData, "---Sektör Seçiniz", new { @class = "form-control dropdown" })
-            </div>
-        </div>
-    </div>
-
-    @if (Model != null)
-    {
-
-        if (Model.sektors.Count != 0)
-        {
-            <table class="table table-bordered" id="table" style="width:70%;margin-left:auto;margin-right:auto; margin-top:400px;">
-                <tr style="font-weight:bold;">
-                    <td>Id</td>
-                    <td>Sektor Adi</td>
-                    <td>Sil</td>
-                    <td>Güncelle</td>
-                </tr>
-                @foreach (var item in Model.sektors)
-                {
-                    <tr>
-                        <td>@item.SektorId</td>
-                        <td>@item.SektorAdi</td>
-                        <td><a href="/Sektor/SektorSil/@item.SektorId" class="btn btn-danger">Sil</td>
-                        <td><button class="btn btn-success" onclick="openDetail('@item.SektorAdi',@item.SektorId)">Güncelle</button></td>
-                        @*<td><button style="margin-left:240px;" type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Güncelle</button></td>*@
-                    </tr>
-                }
-
-            </table>
-        }
-
-    }
-
-
-    @*KAYDET MODAL*@
-    <div class="container">
-
-        <div class="modal fade" id="mySaveModal" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-
-                        <h4 class="modal-title">Yeni Sektör Ekleme</h4>
-                    </div>
-
-                    <div class="modal-body">
-                        <form class="form-group">
-                            @*<label>Sektör Adı</label>*@
-                            <input id="txtsektoradi" type="text" placeholder="Sektör Adı Giriniz" class="form-control" />
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" id="sektorSave" class="btn btn-outline-primary">Kaydet</button>
-                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</body>
-</html>
