--- a/NewVizyonProject/Views/Sektor/YeniSektor.cshtml
+++ b/NewVizyonProject/Views/Sektor/YeniSektor.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewVizyonProject.Models.Sektor
+﻿@*@model NewVizyonProject.Models.Sektor
 @{
     ViewData["Title"] = "YeniSektor";
     Layout = "~/Views/Shared/_IndexLayout.cshtml";
@@ -10,6 +10,6 @@
         <button class="btn btn-primary">Kaydet</button>
     </form>
 </body>
-</html>
+</html>*@
 
 
