sektor update.js updated

--- a/NewVizyonProject/Views/Sektor/_SektorVeKonuGuncelle.cshtml
+++ b/NewVizyonProject/Views/Sektor/_SektorVeKonuGuncelle.cshtml
@@ -12,11 +12,12 @@
 
                 <div class="modal-body">
                     <form class="form-group">
-                        <b>Sektor Id</b>
-                        <input id="sektorvekonuupdateid" type="text" class="form-control" />
+                        @*<b>Sektor Id</b>
+                        <input id="sektorvekonuupdateid" type="text" class="form-control" />*@
                         <b>Sektor Adı</b>
                         <input id="sektorvekonuupdatename" type="text" class="form-control" />
-                        
+
+                        @*<h4 style="color:red;" id="sektorvekonuupdatename"></h4>*@
                     </form>
                 </div>
                 <div class="modal-footer">
