--- a/NewVizyonProject/Views/Sektor/_SektorUpdate.cshtml
+++ b/NewVizyonProject/Views/Sektor/_SektorUpdate.cshtml
@@ -2,8 +2,8 @@
 
 <div class="container">
 
-    <div class="modal fade" id="myUpdateModal" role="dialog">
-        <div class="modal-dialog modal-lg">
+    <div class="modal fade" id="mySektorUpdateModal" role="dialog">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -12,16 +12,16 @@
 
                 <div class="modal-body">
                     <form class="form-group">
-                        @*<b>Sektor Id</b>
-                        <input id="sektorvekonuupdateid" type="text" class="form-control" />*@
-                        <b>Sektor Adı</b>
-                        <input id="sektorvekonuupdatename" type="text" class="form-control" />
+                        @*<b>Sektor Id</b>*@
+                        <input id="sektorupdateid" type="hidden" class="form-control" />
+                        <b>Sektor Adı</b><br /><br />
+                        <input id="sektorupdatename" type="text" class="form-control" />
 
                         @*<h4 style="color:red;" id="sektorvekonuupdatename"></h4>*@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="sektorVeKonuUpdate" class="btn btn-outline-success">Güncelle</button>
+                    <button type="submit" id="sektorUpdate" class="btn btn-outline-success">Güncelle</button>
                     <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
                 </div>
 
