--- a/NewVizyonProject/Views/Sektor/_YeniKonu.cshtml
+++ b/NewVizyonProject/Views/Sektor/_YeniKonu.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
 
     <div class="modal fade" id="myKonuModal" role="dialog">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
 
