--- a/NewVizyonProject/Views/Sektor/_YeniSektor.cshtml
+++ b/NewVizyonProject/Views/Sektor/_YeniSektor.cshtml
@@ -4,7 +4,7 @@
 <div class="container">
 
     <div class="modal fade" id="mySaveModal" role="dialog">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
 
