--- a/NewVizyonProject/Views/Shared/_IndexLayout.cshtml
+++ b/NewVizyonProject/Views/Shared/_IndexLayout.cshtml
@@ -32,13 +32,13 @@
                     <a class="nav-link" href="/Sektor/Index/">İL ÇALIŞMA PLANI</a>
                 </li>
                 <li class="nav-item" active>
-                    <a class="nav-link" href="/Sektor/SektorIndex">SEKTÖR <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" aria-current="page" href="/Sektor/SektorIndex">SEKTÖR <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Sektor/KonuIndex/">KONU</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/Index/">İYİ UYGULAMA</a>
+                    <a class="nav-link" href="/Sektor/AciklamaIndex/">İYİ UYGULAMA</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Sektor/Index/">RAPORLAMA</a>
