--- a/NewVizyonProject/Views/Sektor/_SektorVeKonuSil.cshtml
+++ b/NewVizyonProject/Views/Sektor/_SektorVeKonuSil.cshtml
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <h4 style="color:red;">Seçilen Sektör Silinecektir...</h4><br />
+                    <h4>Seçilen Sektör Silinecektir...</h4><br />
                     <form class="form-group">
                         @*<b>Sektor Adı</b><br />*@
                         <h5 id="sektorvekonuname"></h5>
