--- a/NewVizyonProject/Views/Sektor/_AciklamaDelete.cshtml
+++ b/NewVizyonProject/Views/Sektor/_AciklamaDelete.cshtml
@@ -1,28 +1,30 @@
-﻿@model NewVizyonProject.Models.ViewModel.SektorVeKonuViewModel
+﻿
+
 
 <div class="container">
 
-    <div class="modal fade" id="myKonuModal" role="dialog">
+    <div class="modal fade" id="AciklamaDeleteModal" role="dialog">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
-
-                    <h4 class="modal-title">Yeni Konu Ekleme</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    @*<h4 class="modal-title"></h4>*@
                 </div>
 
                 <div class="modal-body">
+                    <h4>Seçilen Detay Silinecektir...</h4><br />
                     <form class="form-group">
-                        @*<label>Sektör Adı</label>*@
-                        <input id="txtkonuadi" type="text" placeholder="Konu İçeriği Giriniz" class="form-control" />
+                        @*<b>Sektor Adı</b><br />*@
+                        <h5 id="detaydeletename"></h5>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="konuSave" class="btn btn-outline-primary">Kaydet</button>
-
+                    <button type="submit" id="aciklamaDelete" class="btn btn-outline-success">Ok</button>
                     <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
                 </div>
-            </div>
 
+
+            </div>
         </div>
     </div>
 </div>
