--- a/NewVizyonProject/Views/Shared/_IndexLayout.cshtml
+++ b/NewVizyonProject/Views/Shared/_IndexLayout.cshtml
@@ -9,13 +9,11 @@
 </head>
 <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav">
-        @*<a class="navbar-brand" href="/Sektor/Index/">Ana Sayfa</a>*@
-        @*<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>*@
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav" style="margin-left:510px;">
+  
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        @*<a class="navbar-brand" href="#" data-abc="true">BBBOOTSTRAP</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>*@
+        <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto" style="margin-left:510px;">
                 <li class="nav-item ">
                     <a class="nav-link" href="/Sektor/Index/">GÖSTERGELER </a>
                 </li>
@@ -43,13 +41,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Sektor/Index/">RAPORLAMA</a>
                 </li>
-                @*<li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>*@
             </ul>
-        </div>
-    </nav><br />
 
+        </div>
+    </nav>
     @RenderBody()
 </body>
 </html>
