--- a/NewVizyonProject/Views/Default/_CreateSektor.cshtml
+++ b/NewVizyonProject/Views/Default/_CreateSektor.cshtml
@@ -3,27 +3,25 @@
 
 <div class="container">
 
-    <div class="modal fade" id="myDeleteModal" role="dialog">
+    <div class="modal fade" id="mySaveModal" role="dialog">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    @*<h4 class="modal-title"></h4>*@
+
+                    <h4 class="modal-title">Yeni Sektör Ekleme</h4>
                 </div>
 
                 <div class="modal-body">
-                    <h4>Seçilen Sektör Silinecektir...</h4><br />
                     <form class="form-group">
-                        @*<b>Sektor Adı</b><br />*@
-                        <h5 id="sektorvekonuname"></h5>
+                        <label>Sektör Adı</label>
+                        <input id="txtsektoradi" type="text" placeholder="Sektör Adı Giriniz" class="form-control" />
+                        <span ></span>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="sektorVeKonuDelete" class="btn btn-outline-success">Ok</button>
+                    <button type="submit" id="sektorSave" class="btn btn-outline-primary">Kaydet</button>
                     <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
                 </div>
-
-
             </div>
         </div>
     </div>
