--- a/NewVizyonProject/Views/Shared/_IndexLayout.cshtml
+++ b/NewVizyonProject/Views/Shared/_IndexLayout.cshtml
@@ -15,31 +15,31 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto" style="margin-left:510px;">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/Sektor/Index/">GÖSTERGELER </a>
+                    <a class="nav-link" href="/Default/Index/">GÖSTERGELER </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/Index/">PROJELER</a>
+                    <a class="nav-link" href="/Default/Index/">PROJELER</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/Index/">FAALİYETLER</a>
+                    <a class="nav-link" href="/Default/Index/">FAALİYETLER</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/Index/">TALİMATLAR</a>
+                    <a class="nav-link" href="/Default/Index/">TALİMATLAR</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/Index/">İL ÇALIŞMA PLANI</a>
+                    <a class="nav-link" href="/Default/Index/">İL ÇALIŞMA PLANI</a>
                 </li>
                 <li class="nav-item" active>
-                    <a class="nav-link" aria-current="page" href="/Sektor/SektorIndex">SEKTÖR <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" aria-current="page" href="/Default/SektorIndex">SEKTÖR <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/KonuIndex/">KONU</a>
+                    <a class="nav-link" href="/Default/KonuIndex/">KONU</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/AciklamaIndex/">İYİ UYGULAMA</a>
+                    <a class="nav-link" href="/Default/AciklamaIndex/">İYİ UYGULAMA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Sektor/Index/">RAPORLAMA</a>
+                    <a class="nav-link" href="/Default/Index/">RAPORLAMA</a>
                 </li>
             </ul>
 
