--- a/NewVizyonProject/Views/Default/KonuIndex.cshtml
+++ b/NewVizyonProject/Views/Default/KonuIndex.cshtml
@@ -69,7 +69,7 @@
 
 @Html.Partial("_DeleteKonu")
 @Html.Partial("_CreateKonu")
-@Html.Partial("_konuUpdate")
+@Html.Partial("_UpdateKonu")
 
 
 @*<style>
