--- a/NewVizyonProject/Views/Default/_UpdateAciklama.cshtml
+++ b/NewVizyonProject/Views/Default/_UpdateAciklama.cshtml
@@ -14,8 +14,9 @@
                         <input id="aciklamaupdateid" type="hidden" class="form-control" />
                         <b>Açıklama</b><br /><br />
                         <input id="detayupdatename" type="text" class="form-control" cols="20" rows="2" /><br /><br />
+                        <span class="requiredField" id="txtdetayUpdateRequired" style="display:none;">Bu alan zorunludur!</span>
                         <b>Onay Tarihi</b><br /><br />
-                        <input id="detayupdatedate" type="date"  class="form-control" /><br /><br />
+                        <input id="detayupdatedate" type="date" class="form-control" /><br /><br />
                         <b>Puan</b><br /><br />
                         <input id="puanver" name="puanVer" type="number" value="1" min="1" max="10" />
                     </form>
