--- a/NewVizyonProject/Views/Default/_DeleteAciklama.cshtml
+++ b/NewVizyonProject/Views/Default/_DeleteAciklama.cshtml
@@ -1,4 +1,20 @@
-﻿
+﻿@*<div class="container">
+
+        <div id="AciklamaDeleteModal" class="modal" style="margin:auto; width:500px; margin-top:70px; ">
+            <form class="modal-content">
+                <div class="container">
+                    <h1>Delete Data</h1>
+                    <p>Seçilen Detay Silinecektir ?</p>
+                    <h5>id="detaydeletename"</h5>
+
+                    <div class="clearfix">
+                        <button type="submit" id="aciklamaDelete" class="btn btn-outline-success">Ok</button>
+                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>*@
 
 
 <div class="container">
@@ -7,14 +23,16 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
+                    <h1>Delete Data</h1>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    @*<h4 class="modal-title"></h4>*@
+                    <h4 class="modal-title"></h4>
                 </div>
 
                 <div class="modal-body">
+
                     <h4>Seçilen Detay Silinecektir...</h4><br />
                     <form class="form-group">
-                        @*<b>Sektor Adı</b><br />*@
+                        <b>Sektor Adı</b><br />
                         <h5 id="detaydeletename"></h5>
                     </form>
                 </div>
