--- a/NewVizyonProject/Views/Default/_DeleteKonu.cshtml
+++ b/NewVizyonProject/Views/Default/_DeleteKonu.cshtml
@@ -1,14 +1,10 @@
-﻿
-
-
-
-
-<div class="container">
+﻿<div class="container">
 
     <div class="modal fade" id="myDeleteModal" role="dialog">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
+                    <h1>Delete Data</h1>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     @*<h4 class="modal-title"></h4>*@
                 </div>
@@ -30,3 +26,21 @@
         </div>
     </div>
 </div>
+
+
+@*<div class="container">
+
+    <div id="myDeleteModal" class="modal" style="margin:auto; width:500px; margin-top:70px; ">
+        <form class="modal-content">
+            <div class="container">
+                <h1>Delete Data</h1>
+                <p>Seçilen Detay Silinecektir ?</p>
+
+                <div class="clearfix">
+                    <button type="submit" id="konuDelete" class="btn btn-outline-success">Ok</button>
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>*@
